got frontend working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="/manifest.json" />
 
-    <title>My Ultra Rare Domain Service</title>
+    <title>Data Domain Service</title>
     <meta name="title" content="My Ultra Rare Domain Service" />
     <meta name="description" content="Come mint an ultra rare domain on Polygon!" />
 
